--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Curley aka Que</title>
     </head>
     <body>
+        <img src="MyNinja.jpg" alt="Curley's Ninja"       
         <h1>Curley aka Que</h1>
+        <p>Full-stack web developer</p>
     </body>
 </html>
