Removed default browser styling

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>Curley aka Que</title>
+        <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
-        <img src="MyNinja.jpg" alt="Curley's Ninja"       
+        <img src="MyNinja.jpg" alt="Curley's Ninja"/>       
         <h1>Curley aka Que</h1>
         <p>Full-stack web developer</p>
     </body>
