--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
-        <img src="MyNinja.jpg" alt="Curley's Ninja"/>       
+        <img src="Curley.jpg" alt="Curley's HeadShot"/>       
         <h1>Curley aka Que</h1>
         <p>Full-stack web developer</p>
     </body>
