Styled the 'aka Que'

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
-        <img src="MyNinja.jpg" alt="Curley's HeadShot"/>       
-        <h1>Curley aka Que</h1>
-        <p>Full-stack web developer</p>
+        <section class="hero">
+            <header>
+                <img src="MyNinja.jpg" alt="Curley's HeadShot"/>       
+                <h1>Garnel <sub>aka Que</sub> Curley</h1>
+                <p>Full-stack web developer</p>
+            </header>
+        </section>
     </body>
 </html>
